--- a/public/views/maps/newMap.html
+++ b/public/views/maps/newMap.html
@@ -457,25 +457,43 @@
                                     <div class="col-xs-4">
                                         </br>
                                         <label>Item name</label>
-                                        <input ng-model="scene.dynamicItemName" class="form-control"/>
+                                        <input ng-model="newDynamicItem.dynamicItemName" class="form-control"/>
                                     </div>
 
                                     <div class="col-xs-4">
                                         </br>
                                         <label>Item speed (km/h)</label>
-                                        <input ng-model="scene.itemSpeed" class="form-control"/>
+                                        <input ng-model="newDynamicItem.itemSpeed" class="form-control"/>
                                     </div>
 
-                                    <div class="col-xs-3">
-                                        </br>
-                                        <div class="container">
-                                        </div>
-                                    </div>
+                                    <div class="col-xs-12">
+                                        <table class="table table-striped" ng-show="newDynamicItem.route.length>0">
+                                            <thead>
+                                                <tr>
+                                                    <th>Order</th>
+                                                    <th>Longitude</th>
+                                                    <th>Latitude</th>
+                                                    <th>Optiones</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                                <tr ng-repeat="point in newDynamicItem.route track by $index">
+                                                    <td>{{$index}}</td>
+                                                    <td>{{point.long}}</td>
+                                                    <td>{{point.lat}}</td>
+                                                    <td>
+                                                        <button class="btn btn-danger fa fa-trash-o" 
+                                                                data-toggle="modal" data-target="#deletePointFromRouteModal"
+                                                                ng-click="selectPointToDelete(point)"></button>
+                                                    </td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>    
 
-                                    <div class="col-xs-4">
+                                    <div class="col-xs-12">
                                         </br>
-                                        <button type="button" class="btn btn-danger" onclick="deleteDynamicItemPoit()">Delete</button>
-                                        <button type="button" class="btn btn-success">Save item</button>
+                                        <button type="button" class="btn btn-success" ng-click="saveDynamicItemInScene()">Save item</button>
                                     </div>
                                 </div>
 
@@ -503,40 +521,15 @@
                                         
                                         dynamicItemsMap.on('singleclick', function(evt) {
                                             var pos = ol.proj.transform(evt.coordinate,'EPSG:3857', 'EPSG:4326');
-                                            // pos[0] -> lat
-                                            // pos[1] --> long
-                                            var pos0 = Math.round(pos[0] * 100) / 100;
-                                            var pos1 = Math.round(pos[1] * 100) / 100;
+                                            var appElement = document.querySelector('[ng-app=app]');
+                                            var $scope = angular.element(appElement).scope();
+                                            $scope = $scope.$$childHead; 
                                             
-                                            var input = "<input name=\"point\" type=\"checkbox\" value=\""+pos+"\">("+pos0+", "+pos1+")</input> <br />";
-                                            $('.container').append(input);
+                                            $scope.newDynamicItem.route.push({
+                                                long: pos[1],  
+                                                lat: pos[0] 
+                                            });
                                         });
-                                        
-                                        function deleteDynamicItemPoit(){
-                                            //var checkboxList = $('input[name=point]');
-                                            //var checkboxSelectedList = $('input[name=point]:checked');
-                                            alert($('input[name=point]:checkbox:not(:checked)').length);
-                                            
-                                            
-                                            
-                                            //console.log(checkboxList);
-                                            //console.log(checkboxSelectedList);
-                                            
-                                            //alert(checkboxList.length+" -- "+checkboxSelectedList.length);
-                                            
-                                            for(index=0; index<checkboxSelectedList.length; index++){
-                                                var pos = checkboxSelectedList[index];
-                                                var index = checkboxList.indexOf(pos);
-                                                
-                                                if(index>=0){
-                                                    checkboxList.splice(index,1);
-                                                }
-                                                
-                                                alert(checkboxList.length);      
-                                            }
-                                            
-                                            $('.container').html(checkboxList);
-                                        }
                                     </script>
                                 </div>
                                     
@@ -666,6 +659,29 @@
           </div>
         </div>
 
+        <!-- Delete map Modal -->
+        <div class="modal fade" role="dialog" id="deletePointFromRouteModal">
+          <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Confirmation</h4>
+              </div>
+                
+              <div class="modal-body">
+                <p>Are you sure you want to delete this point?</p>
+              </div>
+                
+              <div class="modal-footer">  
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-danger" data-dismiss="modal" ng-click="deletePointFromRoute()">Delete</button>  
+              </div>
+            </div>
+
+          </div>
+        </div>
 
         <!-- Delete static item Modal -->
         <div class="modal fade" role="dialog" id="deleteStaticItemModal">
