--- a/public/views/maps/newMap.html
+++ b/public/views/maps/newMap.html
@@ -276,7 +276,7 @@
                                     
                                     <div class="col-xs-3">
                                         </br> 
-                                         <label>Item type</label>
+                                         <label>Static item type</label>
                                          <select class="form-control" ng-model="newStaticItem.type">
                                             <option ng-repeat="staticItem in staticItemList" value="{{staticItem}}">
                                                 {{staticItem.name}}
@@ -337,10 +337,12 @@
                                                 $scope = $scope.$$childHead; 
                                                 
                                                 $('#staticItemLat').val(position[0]);
-                                                $scope.newStaticItem.latitude = position[0];
-                                                
                                                 $('#staticItemLong').val(position[1]);
-                                                $scope.newStaticItem.longitude = position[1];                                                
+                                                       
+                                                $scope.$apply(function () {
+                                                    $scope.newStaticItem.latitude = position[0];    
+                                                    $scope.newStaticItem.longitude = position[1];
+                                                });
                                             });
                                         </script>                                      
                                 </div>
@@ -448,7 +450,7 @@
                                         </br>
                                         <label>Dynamic item type</label>
                                         <select class="form-control" ng-model="newDynamicItem.type">
-                                            <option ng-repeat="dynamicItem in dynamicItemList" value="{{dynamicItem._id}}">
+                                            <option ng-repeat="dynamicItem in dynamicItemList" value="{{dynamicItem}}">
                                                 {{dynamicItem.name}}
                                              </option>
                                         </select>
@@ -525,13 +527,43 @@
                                             var $scope = angular.element(appElement).scope();
                                             $scope = $scope.$$childHead; 
                                             
-                                            $scope.newDynamicItem.route.push({
-                                                long: pos[1],  
-                                                lat: pos[0] 
+                                            $scope.$apply(function () {
+                                                $scope.newDynamicItem.route.push({
+                                                    long: pos[1],  
+                                                    lat: pos[0] 
+                                                });
                                             });
                                         });
                                     </script>
                                 </div>
+                    
+                                <div class="col-sm-12">
+                                    <table class="table table-striped" ng-show="dynamicItemListInScene.length>0">
+                                        <thead>
+                                            <tr>
+                                                <th>Item name</th>
+                                                <th>Item type</th>
+                                                <th>Speed</th>
+                                                <th>Icon</th>
+                                                <th>Options</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody ng-repeat="dynamicItem in dynamicItemListInScene">
+                                            <tr>
+                                                <td>{{dynamicItem.name}}</td>
+                                                <td>{{dynamicItem.type.name}}</td>
+                                                <td>{{dynamicItem.speed}}</td>
+                                                <td><img src="{{dynamicItem.type.icon}}" height="16" width="16"/></td>
+                                                <td>
+                                                    <button class="btn btn-danger fa fa-trash-o" 
+                                                            data-toggle="modal" data-target="#deleteDynamicItemModal"
+                                                            ng-click="selectDynamicItemToDelete(dynamicItem)"></button>
+                                                </td> 
+                                            </tr>
+                                        </tbody>
+                                    </table>                                    
+                                </div>
+                                    
                                     
                                 <div class="col-sm-12">
                                     <button type="button" class="btn btn-primary btn-block" ng-click="saveScene()">Save</button>
@@ -659,7 +691,29 @@
           </div>
         </div>
 
-        <!-- Delete map Modal -->
+        <div class="modal fade" role="dialog" id="deleteDynamicItemModal">
+          <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Confirmation</h4>
+              </div>
+                
+              <div class="modal-body">
+                <p>Are you sure you want to delete this item?</p>
+              </div>
+                
+              <div class="modal-footer">  
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-danger" data-dismiss="modal" ng-click="deleteDynamicItemFromScene()">Delete</button>  
+              </div>
+            </div>
+
+          </div>
+        </div>
+
         <div class="modal fade" role="dialog" id="deletePointFromRouteModal">
           <div class="modal-dialog">
 
