--- a/public/views/maps/newMap.html
+++ b/public/views/maps/newMap.html
@@ -593,7 +593,7 @@
                 </div>                         
         </div>   
 
-                <div class="panel panel-primary table-responsive" ng-hide="hideScene" ng-show="sceneList.length>0">
+                <div class="panel panel-primary table-responsive" ng-hide="hideScene" ng-hide="sceneList.length==0">
                     <div class="panel-heading">
                         <h3 class="panel-title"><i class="fa fa-list-alt"></i> List of scenes for this map</h3>
                     </div>
@@ -604,8 +604,8 @@
                                     <th>Scene name</th>
                                     <th>Creation date</th>
                                     <th>Recommender settings</th>
-                                    <th>Number of static items into the scene</th>
-                                    <th>Number of dynamic items into the scene</th>
+                                    <th>Number of static items</th>
+                                    <th>Number of dynamic items</th>
                                     <th></th>
                                 </tr>
                             </thead>
@@ -617,13 +617,15 @@
                                     <td>{{scene.recommenderSettings}}</td>
                                     <td>{{scene.staticItemNumber}}</td>
                                     <td>{{scene.dynamicItemNumber}}</td>
-                                    <td>{{scene.city}}</td><!--scene.sceneID -->
+                                    <td>{{scene.city}}</td>
                                     <td>
                                         <button class="btn btn-primary fa fa-pencil-square-o" 
                                                 onclick="window.location.href='#/map/editScene'"></button>
                                         
                                         <button class="btn btn-danger fa fa-trash-o" 
-                                                data-toggle="modal" data-target="#deleteMapModal"></button>
+                                                data-toggle="modal" 
+                                                data-target="#deleteSceneModal"
+                                                ng-click="selectSceneToDelete(scene)"></button>
                                     </td> 
                                 </tr>
                             </tbody>
@@ -646,11 +648,13 @@
                         </ul>
                     </nav>
                 </div>
-    </div>
+            </div>
+		</div>
+	</div>	
 </div>
 
         <!-- Delete map Modal -->
-        <div class="modal fade" role="dialog" id="deleteMapModal">
+        <div class="modal fade" role="dialog" id="deleteSceneModal">
           <div class="modal-dialog">
 
             <!-- Modal content-->
@@ -661,12 +665,12 @@
               </div>
                 
               <div class="modal-body">
-                <p>Are you sure you want to delete this map?</p>
+                <p>Are you sure you want to delete this scene?</p>
               </div>
                 
               <div class="modal-footer">  
                 <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-danger" data-dismiss="modal">Delete</button>  
+                <button type="button" class="btn btn-danger" data-dismiss="modal" ng-click="deleteScene()">Delete</button>  
               </div>
             </div>
 
